--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,12 @@ p {
 	text-align: left;
 }
 
+.caption-center {
+	font-size: 14px;
+	text-align: center;
+	margin-top: 2px;
+}
+
 img {
 	width: 100%;
 }
